# ping-pong-api

./: .env.sample  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build_and_test.yml  coverage.yml  rust.yml
.sqlx/: query-07e7b1a7123071f690719197549f4812368a049b4f3faaa705c937d1cbbf5b39.json  query-22a8c643f9122a93b71ae84d98d975ce04ae851ad33b2e6886be6b30f04da99d.json  query-2f58fa585d7e3188278630edf438a66e2a64c2f844f38875bdfc1eadace29b48.json  query-800962ced0512ce1717ddb07f9928b44b10008bcb6cfadffd124a8e933991e65.json  query-8e20d3bc4f262c37bef87dd7315280120dfa17841b19ae76d7de5e00af984695.json  query-98f1ee63526894f872c6ba61ee6f17694345ff8f3993e7f5ed91f12e737a5a3d.json  query-b19d27985c30163977e24898be89ba07dba0f028a3b0a225eab6c3e9229198ab.json  query-b6b79edd1cd2255d5c2b1f639b97b93e714d95bb82fbcbc74f1b0854f0563d57.json  query-e9047ff9084d1003c6936595b6b458acf8d1d2007761b0a0b199923b72090935.json
migrations/: 20251102202121_game_state.down.sql  20251102202121_game_state.up.sql  20260221223829_multiple-matches.down.sql  20260221223829_multiple-matches.up.sql
src/: api_docs.rs  clock.rs  database.rs  game_table.rs  lib.rs  main.rs  models.rs  openapi.yaml
src/database/: db_error.rs  mod.rs  table_uid.rs
src/models/: application.rs  game.rs  mod.rs
src/tests/: mod.rs  time_mocked_tests.rs  utils.rs
src/tests/features/: basic_game.rs  mod.rs  multiple_matches.rs  time_dependent.rs
tests/: common.rs  integration_tests.rs  test_persistence.rs
tests/integration_tests/: common.rs  main.rs  test_db_errors.rs  test_multi_match.rs  test_persistence.rs
