[package]
name = "ping_pong_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
jiff = { version = "0.2.15", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "test-util", "time"] }

[dev-dependencies]
axum-test = "18.1.0"
