[package]
name = "ping_pong_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
env_logger = "0.11.8"
jiff = { version = "0.2.15", features = ["serde"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "test-util",
    "time",
] }

[dev-dependencies]
axum-test = "18.1.0"
reqwest = { version = "0.12.24", features = ["json"] }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
# This will let us point to built package inside tests
ping_pong_api = { path = ".", package = "ping_pong_api" }
libc = "0.2.177"
