[package]
name = "ping_pong_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
env_logger = "0.11.9"
jiff = { version = "0.2.23", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "test-util",
    "time",
] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
axum-test = "18.7.0"
reqwest = { version = "0.12.28", features = ["json"] }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
libc = "0.2.183"
